Fixed build system

--- a/configure.ac
+++ b/configure.ac
@@ -3,8 +3,8 @@ dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ([2.54])
 AC_INIT([opConvolution], [0.1], [tony_hild@yahoo.com],
              [opConvolution], [http://inf.ufbr.br/])
-AM_INIT_AUTOMAKE([foreign])
-AM_INIT_AUTOMAKE([subdir-objects])
+AM_INIT_AUTOMAKE([foreign - Wall -Werror])
+#AM_INIT_AUTOMAKE([subdir-objects])
 AM_MAINTAINER_MODE
 
 AC_SUBST(INTI_CFLAGS)
@@ -13,7 +13,7 @@ AC_SUBST(INTI_LIBS)
 #
 # Init Automake subsystem
 #
-AM_INIT_AUTOMAKE([opConvolution], [0.1])
+#AM_INIT_AUTOMAKE([opConvolution], [0.1])
 
 # Need the C++ Compiler, Installer and ranlib to strip libraries
 #
@@ -23,6 +23,7 @@ AC_C_CONST
 AC_C_INLINE
 AC_TYPE_SIZE_T
 
+#AC_CONFIG_HEADERS([config.h])
 
 dnl pkg-config
 AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
