Fixed some bugs; Added maxthreads config; Optmized sseXConvolve functions;

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,17 +8,10 @@ ACLOCAL_AMFLAGS=-I cfg
 
 bin_PROGRAMS=opConvolution
 
-#AM_CXXFLAGS = $(INTI_CFLAGS)
+opConvolution_SOURCES = main.cpp timer.h opConvolutionFilter.cpp opConvolutionFilter.h statistics.h util.h StopWatch.cxx StopWatch.h
 
-opConvolution_SOURCES = main.cpp timer.h opConvolutionFilter.cpp opConvolutionFilter.h statistics.h util.h
-#opConvolution_LDADD = $(INTI_LIBS)
-
-#CXXFLAGS="$CXXFLAGS -fopenmp -O3 -msse -msse2 -msse3 -msse4 -msse4.1 -msse4.2 -mfpmath=sse -march=core2 -ffast-math -mtune=core2 -ftree-vectorize -ftree-vectorizer-verbose=1 -fabi-version=4"
-
-
-CXXFLAGS=-fopenmp -O3 -msse -msse2 -msse3 -msse4 -msse4.1 -msse4.2 -mfpmath=sse -march=core2 -ffast-math -mtune=core2 -ftree-vectorize -ftree-vectorizer-verbose=1 -fabi-version=4 -funroll-loops
-LDFLAGS=-O3 -lgomp -msse -msse2 -msse3 -msse4 -msse4.1 -msse4.2 -mfpmath=sse -march=core2 -ffast-math -mtune=core2 -ftree-vectorize -ftree-vectorizer-verbose=1 -fabi-version=4 -funroll-loops -lboost_system -lboost_filesystem
-#LDFLAGS=-lboost_thread -lgomp 
+CXXFLAGS=-fopenmp -O3 -msse -msse2 -msse3 -msse4 -msse4.1 -msse4.2 -mfpmath=sse -march=core2 -mtune=core2 -ffast-math -ftree-vectorize -fabi-version=4
+LDFLAGS=-lgomp-lboost_system -lboost_filesystem
 
 #AUTOMAKE_OPTIONS = foreign
 #EXTRA_DIST =  expansions.m4
