--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,7 @@ bin_PROGRAMS=opConvolution
 opConvolution_SOURCES = main.cpp timer.h opConvolutionFilter.cpp opConvolutionFilter.h statistics.h util.h StopWatch.cxx StopWatch.h
 
 CXXFLAGS=-fopenmp -O3 -msse -msse2 -msse3 -msse4 -msse4.1 -msse4.2 -mfpmath=sse -march=core2 -mtune=core2 -ffast-math -ftree-vectorize -fabi-version=4
-LDFLAGS=-lgomp-lboost_system -lboost_filesystem
+LDFLAGS=-lgomp -lboost_system -lboost_filesystem
 
 #AUTOMAKE_OPTIONS = foreign
 #EXTRA_DIST =  expansions.m4
