Fixed Makefile.am LDFLAGS

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,8 @@ bin_PROGRAMS=opConvolution
 
 opConvolution_SOURCES = main.cpp timer.h opConvolutionFilter.cpp opConvolutionFilter.h statistics.h util.h StopWatch.cxx StopWatch.h
 
-CXXFLAGS=-fopenmp -O3 -msse -msse2 -msse3 -msse4 -msse4.1 -msse4.2 -mfpmath=sse -march=core2 -mtune=core2 -ffast-math -ftree-vectorize -fabi-version=4
+#CXXFLAGS=-fopenmp -O3 -msse -msse2 -msse3 -msse4 -msse4.1 -msse4.2 -mfpmath=sse -march=core2 -mtune=core2 -ffast-math -ftree-vectorize -fabi-version=4
+CXXFLAGS=-fopenmp -O3 -msse -msse2 -msse3 -mfpmath=sse -ffast-math -ftree-vectorize -fabi-version=4
 LDFLAGS=-lgomp -lboost_system -lboost_filesystem
 
 #AUTOMAKE_OPTIONS = foreign
